[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/joystix monospace.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/LevelSelect.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.627451, 0.627451, 0.545098, 1 )

[node name="Button" type="Button" parent="."]
margin_left = 53.0
margin_top = 31.0
margin_right = 148.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="Button6" type="Button" parent="."]
margin_left = 358.0
margin_top = 347.0
margin_right = 658.0
margin_bottom = 464.0
custom_fonts/font = SubResource( 1 )
text = "BACK"

[node name="Button2" type="Button" parent="."]
margin_left = 240.0
margin_top = 35.0
margin_right = 335.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 1 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 423.0
margin_top = 36.0
margin_right = 518.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="Button4" type="Button" parent="."]
margin_left = 620.0
margin_top = 39.0
margin_right = 715.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = "4"

[node name="Button5" type="Button" parent="."]
margin_left = 798.0
margin_top = 39.0
margin_right = 893.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = "5"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
